# lexe-public

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  clippy.toml  crates-io.md  flake.nix  install-cli.sh  justfile  releases-archive.json  releases.json  rust-toolchain.toml  rustfmt.toml
app-rs/: Cargo.toml  README.md  build.rs
app-rs-codegen/: Cargo.toml
app-rs-codegen/src/: lib.rs  main.rs
app-rs/app-rs.xcodeproj/: project.pbxproj
app-rs/src/: android.rs  app.rs  app_data.rs  app_db.rs  bindings.rs  bindings_generated.rs  client.rs  dart_task_handler.rs  db.rs  ffi.rs  ffs.rs  form.rs  frb_generated.rs  lib.rs  logger.rs  payments.rs  payments_db.rs  provision_history.rs  qr.rs  secret_store.rs  settings.rs  storage.rs  types.rs
app-rs/src/ffi/: api.rs  app.rs  app_data.rs  debug.rs  ffi.rs  ffi_generated.io.rs  ffi_generated.rs  form.rs  gdrive.rs  logger.rs  mod.rs  payment_uri.rs  qr.rs  secret_store.rs  settings.rs  types.rs
byte-array/: Cargo.toml
byte-array/src/: lib.rs
common/: Cargo.toml
common/data/: lexe-staging-root-ca-cert.der
common/proptest-regressions/: cli.txt
common/src/: aes.rs  api.rs  array.rs  auth.rs  backoff.rs  base64_or_bytes.rs  base64_or_bytes_opt.rs  byte_str.rs  cli.rs  client.rs  client_node_certs.rs  constants.rs  dotenv.rs  ed25519.rs  enclave.rs  env.rs  hex.rs  hexstr_or_bytes.rs  hexstr_or_bytes_opt.rs  iter.rs  lib.rs  net.rs  notify.rs  notify_once.rs  or_env.rs  password.rs  rng.rs  root_seed.rs  seal.rs  serde_helpers.rs  sha256.rs  shutdown.rs  task.rs  test_event.rs  test_utils.rs  time.rs  vfs_encrypt.rs
common/src/api/: auth.rs  command.rs  def.rs  error.rs  fiat_rates.rs  mod.rs  models.rs  node.rs  ports.rs  provision.rs  qs.rs  rest.rs  revocable_clients.rs  runner.rs  server.rs  test_event.rs  trace.rs  user.rs  version.rs  vfs.rs
common/src/attest/: cert.rs  mod.rs  quote.rs  verify.rs
common/src/cli/: mod.rs  node.rs
common/src/client/: certs.rs  mod.rs  provision.rs  tls.rs
common/src/enclave/: mock.rs  mod.rs  sgx.rs
common/src/ln/: addr.rs  amount.rs  amount_or_all.rs  balance.rs  channel.rs  hashes.rs  invoice.rs  mod.rs  network.rs  node_alias.rs  offer.rs  payments.rs  peer.rs  priority.rs  route.rs
common/src/serde_helpers/: base64_or_bytes.rs  base64_or_bytes_opt.rs  consensus_encode_tx.rs  hexstr_or_bytes.rs  hexstr_or_bytes_opt.rs  mod.rs  optopt.rs
common/src/test_utils/: arbitrary.rs  bitcoind.rs  mod.rs  regtest.rs  roundtrip.rs  snapshot.rs
common/src/tls/: lexe_ca.rs  mod.rs  types.rs
common/test_data/: attest_cert.pem  mrenclave.hex
gdrive/: Cargo.toml
gdrive/src/: api.rs  gname.rs  gvfs.rs  gvfs_file_id.rs  lexe_dir.rs  lib.rs  models.rs  oauth2.rs  restore.rs
hex/: Cargo.toml
hex/src/: lib.rs
lexe/: Cargo.toml  README.md
lexe-api/: Cargo.toml
lexe-api-core/: Cargo.toml
lexe-api-core/data/: basic_payment_snapshot.txt
lexe-api-core/src/: axum_helpers.rs  cli.rs  def.rs  error.rs  lib.rs  macros.rs  models.rs  revocable_clients.rs  types.rs  vfs.rs
lexe-api-core/src/cli/: node.rs
lexe-api-core/src/models/: command.rs  mega.rs  mod.rs  nwc.rs  runner.rs
lexe-api-core/src/revocable_clients/: models.rs
lexe-api-core/src/types/: bounded_note.rs  bounded_string.rs  invoice.rs  lnurl.rs  mod.rs  offer.rs  (+5 more)
lexe-api-core/test_data/: basic_payment_v2_snapshot.txt
lexe-api/src/: auth.rs  credentials.rs  def.rs  lib.rs  macros.rs  rest.rs  server.rs  test_utils.rs  tls_acceptor.rs  trace.rs
lexe-byte-array/: Cargo.toml
lexe-byte-array/src/: lib.rs
lexe-cli/: Cargo.toml  install.sh
lexe-cli/src/: lib.rs  main.rs
lexe-crypto/: Cargo.toml
lexe-crypto/src/: aes.rs  ed25519.rs  lib.rs  password.rs  rng.rs
lexe-enclave/: Cargo.toml
lexe-enclave-core/: Cargo.toml
lexe-enclave-core/src/: enclave.rs  lib.rs  platform.rs  types.rs
lexe-enclave/src/: enclave.rs  platform.rs  types.rs
lexe-hex/: Cargo.toml
lexe-hex/src/: hex.rs  lib.rs
lexe-ln/: Cargo.toml
lexe-ln/data/: bip39-onchain-wallet-snapshot.json  changeset-snapshot.json  changeset-snapshot.v1.1.0.json  legacy-onchain-wallet-snapshot.json  payment-snapshot.v1.json  payment-snapshot.v2.json
lexe-ln/src/: alias.rs  background_processor.rs  balance.rs  channel.rs  channel_monitor.rs  close_fee.rs  command.rs  constants.rs  esplora.rs  event.rs  init.rs  invoice.rs  keys_manager.rs  lib.rs  logger.rs  message_router.rs  migrations.rs  p2p.rs  payment.rs  payments.rs  peer.rs  persister.rs  route.rs  serde_helpers.rs  sync.rs  test_event.rs  traits.rs  tx_broadcaster.rs  wallet.rs
lexe-logger/: Cargo.toml
lexe-logger/src/: lib.rs
lexe-node-client/: Cargo.toml
lexe-node-client/src/: client.rs  credentials.rs  lib.rs
lexe-node-client/test_data/: client_credentials_snapshot.txt
lexe-payment-uri/: Cargo.toml
lexe-payment-uri-core/: Cargo.toml
lexe-payment-uri-core/src/: bip321_uri.rs  email_like.rs  helpers.rs  lib.rs  lightning_uri.rs  lnurl.rs  payment_method.rs  payment_uri.rs  uri.rs
lexe-payment-uri/src/: bip353.rs  lib.rs  lnurl.rs
lexe-qr/: Cargo.toml
lexe-qr/src/: lib.rs
lexe-serde/: Cargo.toml
lexe-serde/src/: base64_or_bytes.rs  base64_or_bytes_opt.rs  hexstr_or_bytes.rs  hexstr_or_bytes_opt.rs  lib.rs  optopt.rs
lexe-sha256/: Cargo.toml
lexe-sha256/src/: lib.rs  sha256.rs
lexe-std/: Cargo.toml
lexe-std/src/: backoff.rs  const_utils.rs  fmt.rs  iter.rs  lib.rs  path.rs  string.rs
lexe-tls/: Cargo.toml
lexe-tls-attest-server/: Cargo.toml
lexe-tls-attest-server/src/: cert.rs  lib.rs  quote.rs
lexe-tls-core/: Cargo.toml
lexe-tls-core/src/: lib.rs
lexe-tls/src/: attest_client.rs  attestation.rs  ed25519_ext.rs  lexe_ca.rs  lib.rs  p256.rs  shared_seed.rs  types.rs
lexe-tls/test_data/: attest_cert.pem  intel-sgx-v4-fmspcs.json  intel-sgx-v4-tcb.json  pck_cert.pem
lexe-tokio/: Cargo.toml
lexe-tokio/src/: events_bus.rs  lib.rs  notify.rs  task.rs
lexe/data/: releases.json
lexe/src/: blocking_wallet.rs  config.rs  lib.rs  payments_db.rs  types.rs  wallet.rs
logger/: Cargo.toml
logger/src/: lib.rs
(+627 files in other folders)
